tests/pos/with-type-operator-3.4-migration.scala
import scala.language.`3.4-migration`

def foo: Int with String = ??? // warn
