tests/neg/i22670/i22670-usage.scala

//import `X-Y`.*

val x = foo // warn
